# MLLM_AI_Career_Assistant

./: .env.example  .gitignore  CNAME  README.md  SETUP_GITHUB.md  conftest.py  pyproject.toml  requirements-dashboard.txt  requirements.txt
.github/workflows/: audit-ats.yml  pages.yml  pipeline.yml
app/: dashboard.py
config/: rulebook.md  settings.yaml
data/: companies_bucketlist.csv  companies_master.csv  notify_companies.txt  profile.json
scripts/: add_job.py  audit_ats.py  build_static_dashboard.py  init_db.py  run_pipeline.py  smoke_test.py  test_telegram.py
src/uk_jobops/: __init__.py  bucketlist.py  config.py  db.py  dedupe.py  filtering.py  models.py  normalize.py  notify.py  pipeline.py
src/uk_jobops/cv/: __init__.py  base_cv.json  render_docx.py
src/uk_jobops/llm/: __init__.py  client.py  fit_score.py  recommend.py  tailor.py  validator.py
src/uk_jobops/sources/: __init__.py  adzuna.py  apify_google.py  apify_linkedin.py  ats.py  base.py  brightdata_linkedin.py  brightdata_serp.py  gov.py  reed.py
tests/: test_core.py
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Charts.tsx  JobsTable.tsx  Kpis.tsx  Recommendations.tsx  Tracker.tsx
web/lib/: format.ts  supabase.ts  types.ts
